# PeripheralInterface

./: .gitignore  README.md
sht2x/: CMakeLists.txt  README.md  main.cpp  run.sh  sht  sht20.cpp  sht2x.cpp  sht2x.hpp
sht2x/src/: main.cpp
sht2x/src/sh2x/: sht2x.cpp  sht2x.hpp
